# xxfunc

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
cargo-xxfunc/: Cargo.toml  README.md
cargo-xxfunc/src/: args.rs  lib.rs  main.rs  xxfunc_proc.rs
cargo-xxfunc/tests/: integration.rs
core/: Cargo.toml
db/: Cargo.toml
db/src/: lib.rs
example/: Cargo.toml  README.md
example/src/: main.rs
example/wasm_output/: interface.d.ts  output.wasm
examples/: Cargo.toml  README.md
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/async/wasm_output/: output.wasm
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/minimal/wasm_output/: output.wasm
examples/src/: main.rs
examples/wasm_output/: output.wasm
exex/: Cargo.toml
exex/src/: main.rs
exex/src/exex/: reth.rs  rpc.rs  scheduler.rs
random-dir/: test.txt
reth/: Cargo.toml
runtime/: Cargo.toml  build.rs  wasm_stdout.out
runtime/proto/: execute_service.proto
runtime/src/: lib.rs  main.rs  runtime.rs  wasm.rs
runtime/src/js/: mod.rs
runtime/src/wasm/: mod.rs  runtime.rs
runtime/tests/: module.rs  module.wasm  wasm-exex.wasm
runtime/tests/wasm-exex/: Cargo.toml
runtime/tests/wasm-exex/src/: main.rs
scripts/: build_run_module.sh
server/: Cargo.toml  README.md
server/src/: main.rs
xxfunc/: Cargo.toml  README.md
xxfunc-core/: Cargo.toml
xxfunc-core/src/exex/: mod.rs  scheduler.rs
xxfunc/macro/: Cargo.toml
xxfunc/macro/src/: lib.rs  xxfunc_proc.rs
xxfunc/src/: lib.rs  main.rs  xxfunc_proc.rs
xxfunc/src/exex/: mod.rs  reth.rs  wasm.rs
