[workspace]
resolver = "2"
members = [
	"runtime",
	"exex",
	"xxfunc",
	"xxfunc/macro",
	"db",
	"cargo-xxfunc",
	"server",
]
exclude = ["examples"]

[workspace.package]
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
xxfunc-db = { path = "db" }
xxfunc-runtime = { path = "runtime" }
xxfunc = { path = "xxfunc" }
xxfunc-exex = { path = "exex" }
xxfunc-server = { path = "server" }

reth-exex = { git = "https://github.com/paradigmxyz/reth", features = [
	"serde",
], rev = "5cd22b50e86a3b09cade509235120a6176de7097" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "5cd22b50e86a3b09cade509235120a6176de7097" }
reth = { git = "https://github.com/paradigmxyz/reth", rev = "5cd22b50e86a3b09cade509235120a6176de7097" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "5cd22b50e86a3b09cade509235120a6176de7097" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "5cd22b50e86a3b09cade509235120a6176de7097" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth", rev = "5cd22b50e86a3b09cade509235120a6176de7097" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "5cd22b50e86a3b09cade509235120a6176de7097" }

# async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

# wasm
wasi-common = "22"
wasmtime = "22"

# misc
eyre = "0.6"
jsonrpsee = { version = "0.23", features = ["server", "macros"] }
serde_json = "1"
base64 = "0.22.1"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
toml = "0.7"
serde = { version = "1", features = ["derive"] }

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# cli
clap = { version = "4.5.16", features = ["derive"] }

# server
axum = { version = "0.7.5", features = ["multipart"] }

# db
r2d2 = "0.8.10"
tempfile = "3.12.0"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
