[package]
name = "cargo-xxfunc"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
toml.workspace = true
reqwest.workspace = true
eyre.workspace = true
base64.workspace = true
tokio.workspace = true
serde_json.workspace = true
