[package]
name = "xxfunc-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
# protobuf
tonic = "0.12.1"
prost = "0.13.1"

# wasm
wasi-common = "22"
wasmtime = "22"

futures = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }
