[package]
name = "xxfunc-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
xxfunc-db.workspace = true

# wasm
wasi-common = "23.0.2"
wasmtime-wasi = "23.0.2"
wasmtime = { version = "23.0.2", features = ["async"] }

futures = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
parking_lot = "0.12.3"
wasmtime-wasi-http = "23.0.2"

# reth
reth-exex-types.workspace = true
reth-execution-types.workspace = true

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }
