[package]
name = "xxfunc-server"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
uuid.workspace = true
serde.workspace = true
xxfunc-db.workspace = true
eyre.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
