[package]
name = "xxfunc"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
async-trait.workspace = true
wasi-common.workspace = true
wasmtime.workspace = true
base64.workspace = true

reth-exex.workspace = true
reth-node-ethereum.workspace = true
reth.workspace = true
reth-node-api.workspace = true
reth-tracing.workspace = true
reth-execution-types.workspace = true
reth-exex-types.workspace = true
